[tool.poetry]
name = "discord-remote-workers-bot"
version = "0.1.0"
description = ""
authors = ["suguru-toyohara <suguru_toyohara@aceof.technology>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
"discord.py" = "^2.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
